--- a/MvvmTools.Web/Web.config
+++ b/MvvmTools.Web/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -27,12 +27,32 @@
       </system.Web>
   -->
   <system.web>
-    <authentication mode="None" />
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error redirect="~/Error/NotFound" statusCode="404" />
+    </customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880" requireSSL="true" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5" />
-    <customErrors mode="Off" />
+    <httpRuntime targetFramework="4.5" enableVersionHeader="false"/>
+    <httpCookies httpOnlyCookies="true" requireSSL="true" lockItem="true" />
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering removeServerHeader="true">
+        <verbs>
+          <add verb="OPTIONS" allowed="false" />
+        </verbs>
+      </requestFiltering>
+    </security>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By" />
+      </customHeaders>
+      <redirectHeaders>
+        <clear />
+      </redirectHeaders>
+    </httpProtocol>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
