--- a/MvvmTools.Web/Web.Debug.config
+++ b/MvvmTools.Web/Web.Debug.config
@@ -26,6 +26,6 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
-    <customErrors mode="Off" xdt:Transform="Replace"/>
+    <!--<customErrors mode="Off" xdt:Transform="Replace"/>-->
   </system.web>
 </configuration>
